test/error/iocheck/err1.rzy
// Error: query is not allowed to output

component
  Err1
    input
      query():R{0,100};
    
    output
      event();
      
    implementation elementary
    
    function query():R{0,100}
      event();
      return 0;
    end
    
  end

